# ti-vibe-coding

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: sensor-planner.md  sensor-reviewer.md  sensor-tester.md
.claude/commands/: review.md  test-gen.md
.github/workflows/: claude-review.yml
labs/lab1_scaffold/: README.md
labs/lab2_assistant/: README.md
labs/lab3_sprint/: README.md
src/data/: README.md  generate_sample_data.py  sensor_readings_1000.csv  sensor_readings_dirty.csv
src/sensor_toolkit/: __init__.py  analytics.py  cleaners.py  decorators.py  utils.py  validators.py
tests/: __init__.py  test_analytics.py  test_cleaners.py  test_decorators.py  test_validators.py
